# LLM-Eval-Harness

./: .gitignore  INTERVIEW_PREP.md  README.md  baseline.json  pyproject.toml
.github/workflows/: ci.yml  nightly-eval.yml
datasets/: judge_labeled.yaml  triage.yaml
prompts/: triage_v1.txt
src/: __init__.py  baseline.py  cli.py  config.py  metrics.py  models.py  parsing.py  report.py  runner.py  validation.py
src/llm/: __init__.py  client.py  judge.py
src/scorers/: __init__.py  base.py  judge.py  properties.py  registry.py  structural.py
src/templates/: report.html.j2
tests/: test_phase1.py  test_phase2_scorers.py  test_phase3_judge.py  test_phase4_variance.py  test_phase5_baseline.py  test_phase6_report.py
